ensured responsive design (tested on smaller screens in google chrome)
instead of media queries, which would make the css very wordy, made calculator to the thinnest phone and adjusted padding, margin and gap between calculator and footer in flex container

--- a/style.css
+++ b/style.css
@@ -19,11 +19,13 @@ body {
     flex-direction: column;
     align-items: center;
     justify-content: space-between;
+    padding: 0.4rem;
+    gap: 0.2rem;
 }
 
 .calculator {
     margin: auto;
-    max-width: 25rem;
+    max-width: 350px;
     border-radius: 2rem;
     padding: 2rem 1rem;
     background-color: #243441;
@@ -118,5 +120,5 @@ footer {
 }
 
 .github-icon {
-    width: 25px;
+    width: 20px;
 }
